examples/type_system/failing/18_handle_incomplete_operation_set.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/18_handle_incomplete_operation_set.flx
// error[E402]: Missing Effect Handler Arm
//
// Handler for `Console` is missing operations: read.
//
//   examples/type_system/failing/18_handle_incomplete_operation_set.flx:32:1
//    |
// 32 | fn main() with Console {
//    | ^^^^^^^^^^^^^^^^^^^^^^
//    | ---------------------- handled expression
//
// Hint:
//   Add 1 arm(s) to the handle block:
//
//     read(resume) -> resume(/* : String */ todo!())
//
// Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E402

// E402: handler is missing one or more declared effect operations.

effect Console {
    print: String -> ()
    read: () -> String
}

fn main() with Console {
    perform Console.print("hello") handle Console {
        print(resume, _msg) -> resume(())
    }
}
